[package]
name = "rtp_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0"}
glib = { version = "0.18.2" }
gdk = { version = "0.18.0", optional = true }
gtk = { version = "0.18.1", optional = true }
gst = { package = "gstreamer", version = "0.21.1", features = ["v1_18"] }
gst-video = { package = "gstreamer-video", version = "0.21.1", features = ["v1_18"] }
gst-audio = { package = "gstreamer-audio", version = "0.21.1", features = ["v1_18"] }
gst-app = { package = "gstreamer-app", version = "0.21.1", features = ["v1_18"] }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.21.1", features = ["v1_18"] }
gst-rtp = { package = "gstreamer-rtp", version = "0.21.1", features = ["v1_18"] }
log = { version = "0.4", features = ["std", "serde"] }
anyhow = "1"
priority-queue = "1.2.1"
lazy_static = "1.5.0"
